--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
   "readmeFilename": "README.md",
   "gitHead": "c364be3d93690feeb2aa59cf30ac522fbc16ce1c",
   "dependencies": {
-    "lodash": "~1.3.1"
+    "lodash": "~1.3.1",
+    "express": "~3.3.7",
+    "service-locator": "0.0.2",
+    "jade": "~0.35.0",
+    "logga": "~1.0.0",
+    "stylus-renderer": "0.0.2",
+    "stylus": "~0.37.0"
   }
 }
